Add logic of calculating the total amount to buy with discount

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Pizza Checkout</string>
+    <string name="discount_message_price_drop">Hurray! Your total amount to buy has dropped to %1$d !!😃</string>
+    <string name="discount_message_buy_x_get_y">Yay! You have got %1$d %2$s for the total amount of %3$d !! 😃</string>
+    <string name="checkout_message_default">Enjoy your meal! Happy to serve you! 😊</string>
 </resources>
