--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
 <resources>
     <string name="app_name">Pizza Checkout</string>
-    <string name="discount_message_price_drop">Hurray! Your total amount to buy has dropped to %1$d !!😃</string>
-    <string name="discount_message_buy_x_get_y">Yay! You have got %1$d %2$s for the total amount of %3$d !! 😃</string>
+    <string name="discount_message_price_drop">You have saved amount of $%1$s!!😃</string>
+    <string name="discount_message_buy_x_get_y">You have got %1$s %2$s instead of %3$s!! 😃</string>
     <string name="checkout_message_default">Enjoy your meal! Happy to serve you! 😊</string>
     <string name="clear_all">Clear All</string>
-    <string name="you_will_get">You will get total %1$d Pizzas!</string>
-    <string name="total_amount">Total Amount :  %1$d</string>
+    <string name="total_pizzas">Total Pizzas : %1$s</string>
+    <string name="total_amount">Total Amount :  $%1$s</string>
     <string name="empty_cart">Empty items in cart. Add items to the cart</string>
 </resources>
